[issue][USB][EKissue-2332]Update kernel eye parameters
[rootcause]: kernel eye parameter need change
[solution]: modify kernel eye parameter device->0x0683d1c0,host->0x0473d1c0
[sideeffect]: None
[other]: None

Change-Id: I45e706035202ae2db4fc6494463f8eaf54a85a89

--- a/arch/arm64/boot/dts/sprd/cancun-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/cancun-overlay.dts
@@ -286,8 +286,8 @@
 &hsphy {
 	vdd-supply = <&vddusb33>;
 	extcon = <&pmic_typec>;
-	sprd,hsphy-device-eye-pattern = <0x0683d1c0>;
-	sprd,hsphy-host-eye-pattern = <0x04b3d1c0>;
+	sprd,hsphy-device-eye-pattern = <0x67cd1c0>;
+	sprd,hsphy-host-eye-pattern = <0x493d1c0>;
 	status = "okay";
 };
 
