--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -26,6 +26,7 @@
 #include <dt-bindings/clock/sprd,ums9620-clk.h>
 #include <dt-bindings/usb/pd.h>
 #include "lcd/lcd_icnl9922c_boe_120hz_mipi_fhd.dtsi"
+#include "lcd/lcd_td4376_tm_120hz_mipi_fhd.dtsi"
 #include "lcd/lcd_td4375_dijin_4lane_mipi_fhd.dtsi"
 #include "lcd/lcd_ili9883c_txd_120hz_mipi_hd.dtsi"
 #include "lcd/lcd_nt36528_dj_120hz_mipi_hd.dtsi"
