EKMOTO-4006:LCD:lcm qrcode infomation function adapt<3> Change-Id: I3b0808bf988f2878f8507bc1006e244c020fac02 Reviewed-on: https://gerrit-odm.mot.com/c/home/repo/dev/platform/android/unisoc/bsp/kernel5.15/kernel5.15/+/672 Reviewed-by: zhigang he <zhigang.he@chino-e.com> Reviewed-by: shitao chen <shitao.chen@chino-e.com> Tested-by: gerrito Tested-by: zhigang he <zhigang.he@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/lcd/lcd_icnl9922c_boe_120hz_mipi_fhd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_icnl9922c_boe_120hz_mipi_fhd.dtsi
@@ -29,6 +29,11 @@
 					sprd,reset-off-sequence = <1 10>;
 					/*ontim,tp-reset-flag;*/
 					sprd,need-execute-shutdown;
+					ontim,qrcode-read-flag;
+					sprd,qrcode-reg = <0x95 23>;
+					sprd,qrcode-read-command = [
+						39 00 00 04 F0 99 22 0C
+						];
 
 					sprd,initial-command = [
 						39 00 00 04 F0 99 22 0C
