EKMOTO-5564:Unisoc monthly patch 2024.06(5/13)
Unisoc monthly patch 2024.06

2406__PATCH20008235:
2024-6_18_2579432:

Add sla module for Dual channel network acceleration.

Change-Id: Ib50a3ce3e5267f638bce59add6e0a16eaf51bda9
Reviewed-on: https://gerrit-odm.mot.com/c/home/repo/dev/platform/android/unisoc/bsp/kernel5.15/kernel5.15/+/2117
Tested-by: gerrito
Reviewed-by: guangcheng pei <guangcheng.pei@chino-e.com>

--- a/drivers/unisoc_platform/Makefile
+++ b/drivers/unisoc_platform/Makefile
@@ -14,6 +14,7 @@ obj-$(CONFIG_SPRD_MODEM_DEBUG)	+= debug_log/
 obj-$(CONFIG_SPRD_PMIC_SMPL)	+= sprd_pmic_smpl.o
 obj-$(CONFIG_SPRD_PMIC_SYSCON)  += sprd_pmic_syscon.o
 obj-$(CONFIG_SPRD_SFP_SUPPORT)	+= sfp/
+obj-$(CONFIG_SPRD_SLA_SUPPORT)	+= sla/
 obj-$(CONFIG_SPRD_SYSDUMP) 	+= sysdump/
 obj-$(CONFIG_TIMESTAMP_SYNC)	+= kts_sync/
 obj-$(CONFIG_UNISOC_7SRESET)	+= sprd_7sreset.o
