--- a/drivers/unisoc_platform/Kconfig
+++ b/drivers/unisoc_platform/Kconfig
@@ -75,6 +75,7 @@ source "drivers/unisoc_platform/printk_cpuid/Kconfig"
 source "drivers/unisoc_platform/pub/Kconfig"
 source "drivers/unisoc_platform/sched/Kconfig"
 source "drivers/unisoc_platform/sfp/Kconfig"
+source "drivers/unisoc_platform/sla/Kconfig"
 source "drivers/unisoc_platform/sprd_disp/Kconfig"
 source "drivers/unisoc_platform/sprd_gnss/Kconfig"
 source "drivers/unisoc_platform/sprd_map/Kconfig"
