--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -310,9 +310,9 @@
 };
 
 &ddr_dfs {
-		sprd-scene = "boost", "lcdon", "lcdoff", "camlow",
+		sprd-scene = "boost", "lcd-high", "lcdon", "lcdoff", "camlow",
 			"camhigh", "camveryhigh", "faceid", "top", "boot-opt";
-		sprd-freq = <1244 1536 384 1536 1536 2133 1244 2133 2133>;
+		sprd-freq = <1244 1244 768 384 1536 1536 2133 1244 2133 2133>;
 };
 
 &dptx {
