EKMOTO-6599:kernel: pd charge fail
Change-Id: I3b3c7ed9c940510ab0369ba7db45bf086d61cee2
Reviewed-on: https://gerrit-odm.mot.com/c/home/repo/dev/platform/android/unisoc/bsp/kernel5.15/kernel5.15/+/2667
Tested-by: gerrito
Reviewed-by: zhigang he <zhigang.he@chino-e.com>
Reviewed-by: shunyu li <shunyu.li@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/battery/ums9620-2h10_manila-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/ums9620-2h10_manila-overlay.dtsi
@@ -427,8 +427,8 @@
 		try-power-role = "sink";
 		source-pdos = <PDO_FIXED(5000, 400, PDO_FIXED_USB_COMM |
 				PDO_FIXED_DUAL_ROLE | PDO_FIXED_DATA_SWAP)>;
-		sink-pdos = <PDO_FIXED(5000, 3000, PDO_FIXED_USB_COMM)
-				PDO_PPS_APDO(3300, 11000, 3000)>;
+		sink-pdos = <PDO_FIXED(5000, 3000, PDO_FIXED_USB_COMM)>;
+			//	PDO_PPS_APDO(3300, 11000, 3000)>;
 		op-sink-microwatt = <10000000>;
 	};
 };
