EKMOTO-6765:LCD:Optimize the screen flicker issue caused by dpu underflow<2>
Change-Id: I5771988d7dee53ef59cc7b1ff652f1c44e936367
Reviewed-on: https://gerrit-odm.mot.com/c/home/repo/dev/platform/android/unisoc/bsp/kernel5.15/kernel5.15/+/2790
Tested-by: gerrito
Reviewed-by: shitao chen <shitao.chen@chino-e.com>
Tested-by: shitao chen <shitao.chen@chino-e.com>
Reviewed-by: zhigang he <zhigang.he@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/lcd/lcd_td4376_tm_120hz_mipi_fhd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_td4376_tm_120hz_mipi_fhd.dtsi
@@ -13,6 +13,8 @@
 					sprd,output-bpc = <8>;
 					sprd,dsc-enable = <1>;
 					sprd,dual-dsi-enable = <0>;
+					sprd,need-vblank-adj;
+					sprd,vblank-adj-val = <28>;
 
 					sprd,phy-bit-clock = <1125000>;
 					sprd,phy-escape-clock = <20000>;/* kHz */
